[package]
name = "process-guardian"
version = "0.1.0"
description = "进程监控与守护桌面应用"
authors = ["you"]
edition = "2021"

[lib]
name = "process_guardian_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "1.5", features = [] }

[dependencies]
tauri = { version = "1.5", features = ["notification-all", "shell-all", "custom-protocol"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sysinfo = "0.30"
parking_lot = "0.12"
tokio = { version = "1.35", features = ["full"] }
directories = "5.0"
rusqlite = { version = "0.31", features = ["bundled"] }
chrono = { version = "0.4", features = ["serde"] }

[features]
default = ["custom-protocol"]
custom-protocol = ["tauri/custom-protocol"]
